refactore test run json structure, enhance sorting